refactor(rls): resolve SonarCloud code smells in vendored engine + tests